[package]
name = "oversight"
version = "0.1.0"
authors = ["NotAShelf"]
edition = "2021"

[dependencies]
discord-rich-presence = { git = "https://github.com/nickofolas/discord-rich-presence", branch = "main" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"

toml = "0.7"

lazy_static = "1.4.0"
once_cell = "1.8.0"

ctrlc = "3.4"
